# Trip_genai

./: Marrakech_Expanded_Travel_Guide.csv  app.py  gr.gbnf  main.py  myapp_new.py  places.csv  pyproject.toml
