[tool.poetry]
name = "Trip-planner"
version = "0.1"
authors = ["abdellah", "reda", "marwan"]
description = "idk"

[tool.poetry.dependencies]
python = ">=3.10"
langchain = "^0"
fauna = "^0"
openai = "1.4.0"
pinecone-client = "2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"